src/objects/Favorited_And_Blacklisted__c.object
<CustomObject>
    <fields>
        <fullName>MovieId__c</fullName>
        <label>MovieId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Favorite</fullName>
                </value>
                <value>
                    <fullName>Black List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Favorited_And_Blacklisteds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorited And Blacklisted</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>all_all</fullName>
        <columns>NAME</columns>
        <columns>MovieId__c</columns>
        <columns>User__c</columns>
        <columns>Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>all all</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Favorited And Blacklisted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorited And Blacklisteds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>